--- a/DotNet/POC/CoreV2.2_WithAngular/CoreV2.2_WithAngular/ClientApp/src/app/home/home.component.html
+++ b/DotNet/POC/CoreV2.2_WithAngular/CoreV2.2_WithAngular/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,7 @@
 <h1>Hello, world!</h1>
+
+<div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-auto-logout-link="true" data-use-continue-as="true"></div>
+
 <p>Welcome to your new single-page application, built with:</p>
 <ul>
   <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
