--- a/DotNet/POC/Framework_ScraperDemo/Framework_ScraperDemo/Views/Shared/_Layout.cshtml
+++ b/DotNet/POC/Framework_ScraperDemo/Framework_ScraperDemo/Views/Shared/_Layout.cshtml
@@ -26,12 +26,10 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container-fluid body-content">
+        <hr />
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
 </body>
 </html>
