hacking a tags part 1

--- a/DotNet/POC/Framework_ScraperDemo/Framework_ScraperDemo/Views/Home/Index.cshtml
+++ b/DotNet/POC/Framework_ScraperDemo/Framework_ScraperDemo/Views/Home/Index.cshtml
@@ -1,4 +1,16 @@
 ﻿@using Framework_ScraperDemo.Models
 @model ScraperEchoViewModel
 
-@Html.Raw(@Model.HtmlString)
+
+<section id="page-1" url=@Model.Url>
+    @Html.Raw(@Model.HtmlString)
+</section>
+
+<script>
+
+    var scraperUrl = "/";
+
+    function Navigate(url) {
+        console.log(url);
+    }
+</script>
